# mipt-bsc-thesis

./: .gitignore  CMakeLists.txt  output
include/: annealing.h  ant_optimizer.h  colony.h  config.h  late_acceptance.h  local_search.h  local_searcher.h  matrix.h  optimizer.h  parallel_run.h  perturbation.h  problem_data.h  quality.h  schedule.h  tabu_search.h
myaco/: CMakeLists.txt
myort/: run.sh  test_ort.cc
py/: generate_test.py  test  test1  test2  test3  test_1000_1000_100
src/: annealing.cpp  ant_optimizer.cpp  colony.cpp  local_search.cpp  local_searcher.cpp  main.cpp  matrix.cpp  optimizer.cpp  perturbation.cpp  problem_data.cpp  quality.cpp  schedule.cpp  tabu_search.cpp
tests/: test_100_40_30_0.65_0.65_0.9_0.07  test_100_40_30_0.65_0.65_0.9_0.1  test_100_40_30_0.65_0.65_0.9_0.2  test_100_50_30_0.65_0.65_0.9_0.1  test_100_60_30_0.65_0.65_0.9_0.1  test_100_80_40_0.65_0.65_0.9_0.1  test_150_100_40_0.5_0.5_1.0_0.05  test_150_100_40_0.65_0.65_1.0_0.08  test_150_50_40_0.5_0.5_1.0_0.1  test_150_50_40_0.65_0.65_1.0_0.1  test_150_60_40_0.5_0.5_1.0_0.05  test_150_60_40_0.5_0.5_1.0_0.1  test_150_75_40_0.5_0.5_1.0_0.05  test_200_100_40_0.5_0.5_1.0_0.05  test_200_100_40_0.5_0.5_1.0_0.15  test_200_120_40_0.5_0.5_1.0_0.05  test_200_120_40_0.5_0.5_1.0_0.1  test_200_150_40_0.5_0.5_1.0_0.05  test_200_150_40_0.5_0.5_1.0_0.1  test_200_150_40_0.6_0.5_1.0_0.05  test_200_150_40_0.6_0.5_1.0_0.1  test_200_70_40_0.5_0.5_1.0_0.15  test_200_70_40_0.65_0.65_1.0_0.05  test_200_70_40_0.65_0.65_1.0_0.08  test_300_100_40_0.5_0.5_1.0_0.05  test_300_100_40_0.5_0.5_1.0_0.08  (+41 more)
(+52 files in other folders)
